Bug 398219 - Unable to set latte-dock other than on primary monitor upon restart
Summary: Unable to set latte-dock other than on primary monitor upon restart
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.8.0
Platform: Gentoo Packages Linux
: NOR major
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-04 00:40 UTC by Alexandre Pereira
Modified: 2018-09-08 06:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.8.1
Sentry Crash Report:


Attachments
Image of System settings screen section (713.27 KB, image/jpeg)
2018-09-04 15:29 UTC, Alexandre Pereira
Details
Latte Dock Layout File (11.04 KB, text/plain)
2018-09-04 15:31 UTC, Alexandre Pereira
Details
Latte Dock RC file (4.02 KB, text/plain)
2018-09-04 15:31 UTC, Alexandre Pereira
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre Pereira 2018-09-04 00:40:27 UTC
Hi, I am using latte-dock in a multimonitor environment. I would like to set latte-dock to show in one of the other monitors ( not primary one ), and am able to switch to it. But, upon closing and launching again latte-dock, its always on the primary screen.

I tried also to switch "onPrimary" to false, and set lastScreen to the correct one according to the screens on lattedockrc, but it always displays on the primary one.

Thanks !
Comment 1 Michail Vourlakos 2018-09-04 13:05:12 UTC
(In reply to Alexandre Pereira from comment #0)
> Hi, I am using latte-dock in a multimonitor environment. I would like to set
> latte-dock to show in one of the other monitors ( not primary one ), and am
> able to switch to it. But, upon closing and launching again latte-dock, its
> always on the primary screen.
> 
> I tried also to switch "onPrimary" to false, and set lastScreen to the
> correct one according to the screens on lattedockrc, but it always displays
> on the primary one.
> 
> Thanks !

Thanks for your report, some info:

For v0.8.0 this should be valid. This is happening because Latte was trying to be too smart and not left you without a taskmanager to work with. 

As I was exhausted a lot with that mess, I have re-implemented the multi-screens code for upcoming v0.8.1 and master branch.

In the new implementation your setting concerning Primary and explicit screen shouldnt change. Also Primary docks/panels now have bigger priority than the explicit ones which also what plasma tries to do with its panels.

If you can build Latte from branches: v0.8 or master you could test the new behavior and provide feedback here
Comment 2 Alexandre Pereira 2018-09-04 13:55:47 UTC
just tested it with master branch ( using gentoo, so this is very easy to do ).

see this pastebin, ran with latte-dock -dr : https://pastebin.com/kkhJr2zc

I tried to change one dock from primary to another screen, and restarted latte-dock. All docks still appeared on primary screen: "DVI-0", but it should have appeared on "Display-Port-0".
Comment 3 Michail Vourlakos 2018-09-04 15:22:11 UTC
I tried to replicate in my system and I cant...

1. Can you send here your layout file to check it?
2. Can you try with Default layout to reproduce the faulty behavior?
3. Maybe some screenshots would help 
  a. from your layout how it ends and how it should end
  b. from plasma systemsettings the screens configuration-layout (that would help to reproduce exactly the same layout in my multi-screen system)
Comment 4 Alexandre Pereira 2018-09-04 15:29:46 UTC
Created attachment 114774 [details]
Image of System settings screen section
Comment 5 Alexandre Pereira 2018-09-04 15:31:05 UTC
Created attachment 114775 [details]
Latte Dock Layout File
Comment 6 Alexandre Pereira 2018-09-04 15:31:36 UTC
Created attachment 114777 [details]
Latte Dock RC file
Comment 7 Alexandre Pereira 2018-09-04 15:32:19 UTC
Does these attachments help ?

I can try to make a video also... when OBS emerges :P
Comment 8 Michail Vourlakos 2018-09-04 15:48:16 UTC
(In reply to Alexandre Pereira from comment #7)
> Does these attachments help ?
> 

I can replicate with your layout in my system but with no other layout file :)

let me investigate it...
Comment 9 Michail Vourlakos 2018-09-04 16:43:58 UTC
Git commit 09fe5e385b4df76afbd342fab61afe6c642aaaf1 by Michail Vourlakos.
Committed on 04/09/2018 at 16:43.
Pushed by mvourlakos into branch 'master'.

on startup explicit dock faulty moving onPrimary

--multi-screen fix for explicit docks. There were
cases that explicit docks during startup were
moving to onprimary screen even though they shouldnt
based on the new multi-screens implementation.
Bug was tracked down at a faulty series of signals
that were overwriting dockView config values
to default values and that was creating the fault.
-- one more fix for multi-screens, a missing return
statement in case an explicit dock is called and its
edge at that specific screen is occuppied by an
onPrimary one.
FIXED-IN: 0.8.1

M  +14   -5    app/dock/dockview.cpp
M  +2    -0    app/layout.cpp

https://commits.kde.org/latte-dock/09fe5e385b4df76afbd342fab61afe6c642aaaf1
Comment 10 Michail Vourlakos 2018-09-04 16:45:35 UTC
(In reply to Alexandre Pereira from comment #7)
> Does these attachments help ?
> 

Found it! Please test again with master to confirm in order to apply it also to v0.8 branch...

I really dont know why this was happening only in that layout, the fault was tracked down to a more major one and probably it was influencing more systems...
Comment 11 Alexandre Pereira 2018-09-04 16:53:15 UTC
Just did :) All good !

Besides working properly, I notice that now it says the proper name of the monitor, even if is primary ( usually always said on primary ).

To be honest, this has happened to me for a long time, but I remember once starting layout from fresh and it seemed fixed.

I guess the only hint I can give is that this layout is old, including testing from Xorg and Wayland ( where the names of the monitors change ).
Comment 12 Michail Vourlakos 2018-09-04 16:53:17 UTC
Git commit 10dfc623478ce21533b1806bf945838c7bce9ea6 by Michail Vourlakos.
Committed on 04/09/2018 at 16:52.
Pushed by mvourlakos into branch 'v0.8'.

on startup explicit dock faulty moving onPrimary

--multi-screen fix for explicit docks. There were
cases that explicit docks during startup were
moving to onprimary screen even though they shouldnt
based on the new multi-screens implementation.
Bug was tracked down at a faulty series of signals
that were overwriting dockView config values
to default values and that was creating the fault.
-- one more fix for multi-screens, a missing return
statement in case an explicit dock is called and its
edge at that specific screen is occuppied by an
onPrimary one.
FIXED-IN: 0.8.1
(cherry picked from commit 09fe5e385b4df76afbd342fab61afe6c642aaaf1)

M  +14   -5    app/dock/dockview.cpp
M  +2    -0    app/layout.cpp

https://commits.kde.org/latte-dock/10dfc623478ce21533b1806bf945838c7bce9ea6
Comment 13 Alexandre Pereira 2018-09-06 10:47:57 UTC
Just a heads up, because I think it may be related to this fix, but don't know for sure.

Right now, If I change monitor names ( Like switching from Xorg to Wayland or vice versa ), latte-dock doesn't start ( according to debug log, gets stuck on "Step 1" ). 

To make it work, I have to edit the layout file and remove the "lastScreen" lines. ( then works properly after )
Comment 14 Michail Vourlakos 2018-09-08 06:32:27 UTC
(In reply to Alexandre Pereira from comment #13)
> Just a heads up, because I think it may be related to this fix, but don't
> know for sure.
> 
> Right now, If I change monitor names ( Like switching from Xorg to Wayland
> or vice versa ), latte-dock doesn't start ( according to debug log, gets
> stuck on "Step 1" ). 
> 
> To make it work, I have to edit the layout file and remove the "lastScreen"
> lines. ( then works properly after )


1. I suppose you mean that this is case for an explicit screen set dock and not onPrimary ones

If that is the case then this is unfortunate but it does make sense. As plasma is doing it and Latte follows it screens are identified by their name e.g. HDMI-1, eDS-1 etc...

but these names returned from Qt arent the same for X11 and Wayland. So HDMI-1 for X11 it could be HDMI-1-wayland for wayland. I havent find also any pattern that could help in their naming.

So when a Latte panel/dock is onPrimary set then it just updates its primary screen from X11 to wayland and vice versa. But when the screen is set on an explicit one screen e.g. HDMI-1 then Latte considers that HDMI-1 and HDMI-1-wayland are different screens and they could be also present at the same time and for that reason when working in wayland a dock for HDMI-1 isnt shown for HDMI-1-wayland

You can read the recorded screens identifiers at: ~/.config/lattedockrc  at ScreenConnectors section

The best solution would be the screens to not be identified by their name but rather through their EDID: https://en.wikipedia.org/wiki/Extended_Display_Identification_Data
but I dont know how to retrieve it from Qt...